exports[`<Remote /> should render disabled 1`] = `
<button
  className="remote"
  disabled={true}
  onClick={[Function]}>
  Go
</button>
`;

exports[`<Remote /> should render enabled 1`] = `
<button
  className="remote"
  disabled={undefined}
  onClick={[Function]}>
  Go
</button>
`;
